# lab1-sort-comp

./: CMakeLists.txt  LICENSE  README.md  algorithms.c  algorithms.h  generate_array.c  main.c  utils.c  utils.h
report/: appendix.tex  biblio.bib  bibliography.tex  experiment.tex  instructions.tex  introduction.tex  problem.tex  report.tex  results.tex  structure.tex
src/: algorithms.c  algorithms.h  main.c
tests/: test_better_bubble_sort.c  test_bubble_sort.c  test_improved_selection_sort.c  test_insertion_sort.c  test_merge.c  test_merge_sort.c  test_quick_sort.c  test_selection_sort.c  test_shell_sort.c
